# rag-chu

./: .gitignore  README.md  WORKFLOW_HF.md  pyproject.toml  requirements.txt  start_app_uv.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  main.py  rag_service.py  vision_processor.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatInterface.js  DebugConsole.js  DocumentList.js  DocumentUpload.js
