[project]
name = "rag-chu-app"
version = "0.1.0"
description = "Application RAG pour documents médicaux CHU - Hugging Face Spaces"
authors = [
    { name = "JTh34", email = "j.thomazo@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["rag", "medical", "documents", "ai", "fastapi", "react"]

# Dépendances principales pour le déploiement
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
    "websockets>=12.0",
    "aiofiles>=24.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.2.16",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.64",
    "anthropic>=0.52.2",
    "openai>=1.84.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=11.2.1",
    "python-docx>=0.8.11",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
# Configuration pour sources locales si nécessaire

[project.urls]
Homepage = "https://huggingface.co/spaces/JTh34/rag-chu"
Repository = "https://github.com/JTh34/rag-chu-app"
Issues = "https://github.com/JTh34/rag-chu-app/issues" 